--- a/litreview.bib
+++ b/litreview.bib
@@ -726,3 +726,6 @@
     year={2007},
     organization={ACM}
 }
+
+
+@misc{design-voldemort, title={Design}, url={http://www.project-voldemort.com/voldemort/design.html}, journal={Design - Voldemort}} 
