--- a/litreview.bib
+++ b/litreview.bib
@@ -729,3 +729,38 @@
 
 
 @misc{design-voldemort, title={Design}, url={http://www.project-voldemort.com/voldemort/design.html}, journal={Design - Voldemort}} 
+
+@article{howard_scale_1988,
+    title = {Scale and performance in a distributed file system},
+    volume = {6},
+    url = {http://dl.acm.org/citation.cfm?id=35059},
+    number = {1},
+    urldate = {2017-02-10},
+    journal = {ACM Transactions on Computer Systems (TOCS)},
+    author = {Howard, John H. and Kazar, Michael L. and Menees, Sherri G. and Nichols, David A. and Satyanarayanan, Mahadev and Sidebotham, Robert N. and West, Michael J.},
+    year = {1988},
+    pages = {51--81},
+}
+
+@article{satyanarayanan1990survey,
+    title={A survey of distributed file systems},
+    author={Satyanarayanan, Mahadev},
+    journal={Annual Review of Computer Science},
+    volume={4},
+    number={1},
+    pages={73--104},
+    year={1990},
+    publisher={Annual Reviews 4139 El Camino Way, PO Box 10139, Palo Alto, CA 94303-0139, USA}
+}
+
+@inproceedings{ghemawat_google_2003,
+    title = {The {Google} file system},
+    volume = {37},
+    url = {http://dl.acm.org/citation.cfm?id=945450},
+    urldate = {2017-02-10},
+    booktitle = {{ACM} {SIGOPS} operating systems review},
+    publisher = {ACM},
+    author = {Ghemawat, Sanjay and Gobioff, Howard and Leung, Shun-Tak},
+    year = {2003},
+    pages = {29--43},
+}
