--- a/litreview.bib
+++ b/litreview.bib
@@ -764,3 +764,34 @@
     year = {2003},
     pages = {29--43},
 }
+
+
+@article{mckusick_gfs:_2010,
+    title = {{GFS}: evolution on fast-forward},
+    volume = {53},
+    issn = {00010782},
+    shorttitle = {{GFS}},
+    url = {http://portal.acm.org/citation.cfm?doid=1666420.1666439},
+    doi = {10.1145/1666420.1666439},
+    language = {en},
+    number = {3},
+    urldate = {2017-02-10},
+    journal = {Communications of the ACM},
+    author = {McKusick, Kirk and Quinlan, Sean},
+    month = mar,
+    year = {2010},
+    pages = {42},
+}
+
+
+@inproceedings{beaver_finding_2010,
+    title = {Finding a {Needle} in {Haystack}: {Facebook}'s {Photo} {Storage}.},
+    volume = {10},
+    shorttitle = {Finding a {Needle} in {Haystack}},
+    url = {http://static.usenix.org/legacy/events/osdi10/tech/full_papers/Beaver.pdf},
+    urldate = {2017-02-10},
+    booktitle = {{OSDI}},
+    author = {Beaver, Doug and Kumar, Sanjeev and Li, Harry C. and Sobel, Jason and Vajgel, Peter and {others}},
+    year = {2010},
+    pages = {1--8},
+}
