--- a/litreview.bib
+++ b/litreview.bib
@@ -795,3 +795,15 @@
     year = {2010},
     pages = {1--8},
 }
+
+
+@inproceedings{shvachko_hadoop_2010,
+	title = {The hadoop distributed file system},
+	url = {http://ieeexplore.ieee.org/abstract/document/5496972/},
+	urldate = {2017-02-10},
+	booktitle = {Mass storage systems and technologies ({MSST}), 2010 {IEEE} 26th symposium on},
+	publisher = {IEEE},
+	author = {Shvachko, Konstantin and Kuang, Hairong and Radia, Sanjay and Chansler, Robert},
+	year = {2010},
+	pages = {1--10},
+}
